# mssql-cli

./: .gitignore  README.md  _setup.py  dev_setup.py  patch.py  pyproject.toml  requirements.txt
.github/workflows/: _release.yml  release.yml
mssqlcli/: __init__.py  main.py
mssqlcli/mssqltoolsservice/: _externals.py  externals.py  old2__init__  old__init__.py  setup_service.py
sqltoolsservice/: __init__.py  setup_service.py
