[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mssql-cli"
version = "1.1.0.dev20260118"
description = "A command-line client for SQL Server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }

authors = [
    { name = "Microsoft" }
]

dependencies = [
    "click>=7.0",
    "six",
    "pyodbc>=4.0",
    "prompt-toolkit>=3.0",
    "sqlparse",
    "configobj",
    "terminaltables",
    "humanize",
    "pendulum",
    "tabulate",
    "pygments",
    #"applicationinsights",
    "cli-helpers>=2.7.0"
]

[project.scripts]
mssql-cli = "mssqlcli.main:main"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"mssqlcli.packages.mssqlliterals" = ["*.json"]
#"mssqlcli.mssqltoolsservice.bin" = ["*.exe", "*.dll", "*.json"]
"mssqlcli.mssqltoolsservice" = [
    "bin/*.exe", 
    "bin/*.dll", 
    "bin/*.json",
    "bin/Windows/x64/*"  # Caso existam subpastas
]

[tool.setuptools.packages.find]
include = ["mssqlcli*"]

